--- a/css/style.css
+++ b/css/style.css
@@ -392,18 +392,18 @@ section.services .section-heading + p {
 }
 
 section.services .card-wrapper {
-  margin-top: 7rem;
+  /* margin-top: 7rem; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 2rem;
-  grid-row-gap: 6rem;
+  grid-row-gap: 2rem;
 }
 
 section.services .card-wrapper .card {
   background: var(--pure);
   padding: 3rem 2rem;
   position: relative;
-  padding-top: 5rem;
+  /* padding-top: 5rem; */
   text-align: center;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -413,14 +413,14 @@ section.services .card-wrapper .card {
   -o-transition: all 0.3s ease;
 }
 
-section.services .card-wrapper .card .service-img {
+/* section.services .card-wrapper .card .service-img {
   padding: 22px;
   background-color: var(--primary);
   position: absolute;
   top: -3.5rem;
   left: 50%;
   transform: translateX(-50%);
-}
+} */
 
 section.services .card-wrapper .card .service-img .fab {
   text-align: center;
@@ -1616,7 +1616,7 @@ section.mission-stmt .card-wrapper .card p {
 }
 
 .project h2 {
-  color: var(--secondary);
+  color: var(--base);
   font-weight: 600;
   font-size: 1.5rem;
   margin-top: 10px;
@@ -1624,7 +1624,7 @@ section.mission-stmt .card-wrapper .card p {
 }
 
 .project h3 {
-  color: var(--secondary);
+  color: var(--core);
   font-weight: bold;
   font-size: 1.1rem;
   margin-top: 10px;
@@ -1836,7 +1836,7 @@ section.mission-stmt .card-wrapper .card p {
   }
 
   section.services .card-wrapper {
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
     grid-template-columns: repeat(1, 1fr);
   }
 
