--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ nav.sticky {
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
+  z-index: 10;
 }
 
 nav.sticky ul {
@@ -381,14 +382,32 @@ section.products .card-wrapper .card:hover p {
 }
 
 section.services {
-  background: var(--core);
+  position: relative;
+  background: url("../images/regal-services.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+section.services .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--dark);
+  opacity: 0.8;
+  z-index: 0;
 }
 
 section.services .section-heading {
+  position: relative;
   color: var(--pure);
+  z-index: 1;
 }
 section.services .section-heading + p {
+  position: relative;
   color: var(--pure);
+  z-index: 1;
 }
 
 section.services .card-wrapper {
@@ -402,8 +421,7 @@ section.services .card-wrapper {
 section.services .card-wrapper .card {
   background: var(--pure);
   padding: 3rem 2rem;
-  position: relative;
-  /* padding-top: 5rem; */
+  /* position: relative; */
   text-align: center;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -411,6 +429,7 @@ section.services .card-wrapper .card {
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
+  z-index: 0;
 }
 
 /* section.services .card-wrapper .card .service-img {
@@ -422,12 +441,12 @@ section.services .card-wrapper .card {
   transform: translateX(-50%);
 } */
 
-section.services .card-wrapper .card .service-img .fab {
+/* section.services .card-wrapper .card .service-img .fab {
   text-align: center;
   color: var(--pure);
   font-size: 80px;
   /* width: 100px; */
-}
+/* }  */
 
 section.services .card-wrapper .card h2 {
   font-weight: 600;
@@ -449,18 +468,18 @@ section.services .card-wrapper .card:hover {
   background: var(--primary);
 }
 
-section.services .card-wrapper .card:hover .service-img {
+/* section.services .card-wrapper .card:hover .service-img {
   background: var(--pure);
 }
 section.services .card-wrapper .card:hover .service-img .fab {
   color: var(--primary);
-}
+} */
 
 section.services .card-wrapper .card:hover h2 {
-  color: var(--base);
+  color: var(--dark);
 }
 section.services .card-wrapper .card:hover p {
-  color: var(--dark);
+  color: var(--pure);
 }
 
 section.about {
@@ -526,7 +545,7 @@ section.about .about-container .about-text p {
 }
 
 section.blog {
-  background: var(--base);
+  background: var(--dark);
   padding-bottom: 6rem;
 }
 
@@ -594,7 +613,9 @@ section.blog .card-wrapper .card .card-content a.read-more {
 
 section.contact {
   position: relative;
-  background-color: var(--core);
+  background-image: url("../images/contact-us-section.jpg");
+  background-position: center;
+  background-size: cover;
   padding: 50px 100px;
   /* display: flex; */
   justify-content: center;
@@ -602,10 +623,25 @@ section.contact {
   flex-direction: column;
 }
 
+section.contact .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--dark);
+  opacity: 0.8;
+  z-index: 0;
+}
+
 section.contact .section-heading {
+  position: relative;
+  z-index: 1;
   color: var(--pure);
 }
 section.contact .section-heading + p {
+  position: relative;
+  z-index: 1;
   color: var(--pure);
 }
 
@@ -615,6 +651,8 @@ section.contact .content {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  position: relative;
+  z-index: 1;
 }
 
 section.contact .contactInfo {
@@ -699,7 +737,7 @@ section.contact .contactForm .inputBox input:focus ~ span,
 section.contact .contactForm .inputBox input:valid ~ span,
 section.contact .contactForm .inputBox textarea:focus ~ span,
 section.contact .contactForm .inputBox textarea:valid ~ span {
-  color: #e91e63;
+  color: var(--primary);
   font-size: 12px;
   transform: translateY(-20px);
 }
@@ -1772,6 +1810,7 @@ section.mission-stmt .card-wrapper .card p {
   }
 
   nav ul {
+    display: none;
     position: fixed;
     opacity: var(--li_opacity) !important;
     width: 100% !important;
